# sticky

./: .gitignore  Cargo.toml  Makefile.toml  README.md
crates/adapter/: Cargo.toml
crates/adapter/src/repository_impl/: mod.rs  note_repository_impl.rs
crates/components/: Cargo.toml
crates/components/src/: lib.rs
crates/components/src/input/: blink_cursor.rs  mod.rs  text_element.rs  text_input.rs
crates/components/src/list/: mod.rs
crates/components/src/scroll/: scrollbar.rs
crates/db/: Cargo.toml
crates/db/src/: db.rs  utils.rs
crates/db/src/repository/: note.rs
crates/debounce/: Cargo.toml
crates/debounce/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: editor.rs
crates/handler/: Cargo.toml
crates/handler/src/: lib.rs  note_handler.rs
crates/handler/src/model/: note.rs
crates/kernel/: Cargo.toml
crates/kernel/src/model/: note.rs
crates/kernel/src/repository/: note_repository.rs
crates/list/: Cargo.toml
crates/menu/: Cargo.toml
crates/menu/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
crates/registry/src/global_model/: app_handler.rs  mod.rs  note_store.rs
crates/sticky/: Cargo.toml
crates/sticky/src/: main.rs
crates/sticky/src/view/: editor.rs  hello.rs  mod.rs  text_input.rs  text_wrap.rs
crates/theme/: Cargo.toml
crates/theme/src/: lib.rs
crates/window/: Cargo.toml
crates/window-editor/: Cargo.toml
crates/window-editor/src/: editor.rs
crates/window-list/: Cargo.toml
crates/window/src/: editor.rs  editor_delegate.rs  editor_delegater.rs  lib.rs  list.rs
crates/window/src/window_options/: location.rs  mod.rs  window_size.rs
