[workspace]
resolver = "2"
members = [
  "crates/adapter",
  "crates/db",
  "crates/debounce",
  "crates/kernel",
  "crates/registry",
  "crates/sticky",
  "crates/window-editor",
  "crates/window-list",
]
default-members = ["crates/sticky"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
gpui = { git = "https://github.com/huacnlee/zed.git", branch = "webview" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
rusqlite = { version = "0.34.0", features = ["bundled"] }
ulid = { version = "1.2.1" }
anyhow = { version = "1.0.97" }
derive-new = { version = "0.7.0" }

db = { path = "crates/db" }
registry = { path = "crates/registry" }
adapter = { path = "crates/adapter" }
kernel = { path = "crates/kernel" }
debounce = { path = "crates/debounce" }
window-editor = { path = "crates/window-editor" }
window-list = { path = "crates/window-list" }
